<resources>
    <string name="app_name">shymko_hw_lesson21_2901021_customview</string>
    <string name="text_btn_activity_poster">to main page</string>
    <string name="text_btn_activity_main">to poster page</string>
    <string name="film1_name">Jurassic park</string>
    <string name="film1_genre">action</string>
    <string name="film1_price">100</string>
    <string name="film1_currency"> UAH</string>
    <string name="numStars">3</string>
    <string name="text_btn_speed_increase">+</string>
    <string name="text_btn_speed_decrease">-</string>
    <string name="speed0">0</string>
    <string name="speed1">1</string>
    <string name="speed2">2</string>
    <string name="text_btn_speed_2">2</string>
    <string name="text_btn_speed_0">0</string>
    <string name="text_btn_speed_1">1</string>
</resources>